--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,16 +6,32 @@
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#10B981",
+  "orientation": "portrait",
+  "categories": ["portfolio", "web development"],
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Projets",
+      "url": "/#projects",
+      "description": "Voir mes projets"
+    },
+    {
+      "name": "Contact",
+      "url": "/#contact",
+      "description": "Me contacter"
     }
   ]
 } 
