--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,13 +10,13 @@
   "categories": ["portfolio", "web development"],
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "/android-chrome-192x192.webp",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "/android-chrome-512x512.webp",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
